Minor Fixes for Demo and added 2 icon images

--- a/Swolemate/index.html
+++ b/Swolemate/index.html
@@ -58,6 +58,7 @@
                 <label id="label-times" for="times">How Much Time Do You Have?</label>
                 <select id="times" name="times">
                     <option value="">Please choose one</option>
+                    <option value="2">2 minutes</option>
                     <option value="5">5 minutes</option>
                     <option value="10">10 minutes</option>
                     <option value="15">15 minutes</option>
@@ -98,6 +99,7 @@
             <div id="facebookShare" style="text-align:center"></div>
         </div>    
 
+        <iframe id="musicIframe" style="visibility: hidden"></iframe>
                 <!-- JAVASCRIPT  -->
     <!-- ========================================= -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
