Add Bamazon to Portfolio

--- a/Responsive-Portfolio/portfolio.html
+++ b/Responsive-Portfolio/portfolio.html
@@ -72,6 +72,13 @@
         <h3>LIRI</h3>
       </div>
 
+      <div class="work">
+        <a href="https://github.com/sarabuckley/Bamazon.git">
+        <img src="assets/images/bamazon.png"  alt="Bamazon">
+        </a> 
+        <h3>Bamazon</h3>
+      </div>
+
     </section>
   </main>
   <div class="push"></div>
