--- a/Responsive-Portfolio/index.html
+++ b/Responsive-Portfolio/index.html
@@ -29,7 +29,7 @@
 
       <img src="assets/images/portfolio-about-me.png" class="auth-image" alt="placeholder">
 
-      <p>My name is Sara Buckley. I’m a recent graduate of the University of Washington with a B.A. in Integrated Social Sciences. I enjoyed the experience so much, I decided to return to school again, this time to brush on my coding skills. My last gig was at Microsoft, working on the Host Integration Server product. The languages I used then were Visual Basic; SQL Server and COBOL (yup, I even helped fix the Y2K bug!). So far I am loving new languages like Python and Rust.</p>
+      <p>My name is Sara Buckley. I’m a recent graduate of the University of Washington with a B.A. in Integrated Social Sciences. I enjoyed the experience so much, I decided to return to school again, this time to brush on my coding skills. My last gig was at Microsoft, working on the Host Integration Server product. The languages I used then were Visual Basic; SQL Server and COBOL (yup, I even helped fix the Y2K bug!). So far I am finding full stack web development to be an amazing and creative process. </p>
 
       <p>When I’m not coding, I’m probably hanging out with family, vacuuming up cat hair, playing board games, and enjoying the great outdoors in the Northwest.</p>
 
