--- a/Responsive-Portfolio/portfolio.html
+++ b/Responsive-Portfolio/portfolio.html
@@ -93,6 +93,13 @@
         <h3>Mongo Scraper</h3>
       </div>
 
+      <div class="work">
+        <a href="https://github.com/sarabuckley/Clicky-Game.git">
+        <img src="assets/images/clicky-game.png"  alt="Clicky Game">
+        </a> 
+        <h3>Clicky Game</h3>
+      </div>
+      
     </section>
   </main>
   <div class="push"></div>
